<resources>
    <string name="app_name">Android4A</string>
    <string name="error">Error</string>
    <string name="error_email">Please enter an email</string>
    <string name="error_password">Please enter a password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="birthdate">Birthdate</string>
    <string name="createPassword">Password</string>
    <string name="confirmPassword">Confirm your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>